bug: fix scrollbar issue

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,4 @@
 html{
-    scrollbar-gutter: stable both-edges;
+    /* scrollbar-gutter: stable both-edges; */
+    overflow-y: scroll;
 }
